@@ -1,6 +1,8 @@
 v3.0.3 - YYYY-MMM-DD (to be released)
 -------------------------------------
 
+ - Improves the performance while loading the rules
+   [Issue #1735 - @zimmerle, @p0pr0ck5, @victorhora]
  - Allow empty strings to be evaluated by regex::searchAll
    [Issue #1799, #1785 - @victorhora, @XuanHuyDuong, @zimmerle]
  - Adds basic pkg-config info
